Fix regression: Open file if entering it in the URL-navigator

The regression has been introduced when hiding the DolphinDirLister
inside KFileItemModel. Now the signal urlIsFileError() gets forwarded
to the container again where the file will be opened.

BUG: 301757
FIXED-IN: 4.9.0